src/test/ui/consts/const-err-multi.stderr
error: this constant cannot be used
  --> $DIR/const-err-multi.rs:3:1
   |
LL | pub const A: i8 = -std::i8::MIN;
   | ^^^^^^^^^^^^^^^^^^-------------^
   |                   |
   |                   attempt to negate with overflow
   |
note: lint level defined here
  --> $DIR/const-err-multi.rs:1:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: referenced constant has errors
  --> $DIR/const-err-multi.rs:5:1
   |
LL | pub const A: i8 = -std::i8::MIN;
   |                   ------------- attempt to negate with overflow
LL | //~^ ERROR this constant cannot be used
LL | pub const B: i8 = A;
   | ^^^^^^^^^^^^^^^^^^^^

error: this constant cannot be used
  --> $DIR/const-err-multi.rs:5:1
   |
LL | pub const B: i8 = A;
   | ^^^^^^^^^^^^^^^^^^-^
   |                   |
   |                   referenced constant has errors

error: referenced constant has errors
  --> $DIR/const-err-multi.rs:8:1
   |
LL | pub const A: i8 = -std::i8::MIN;
   |                   ------------- attempt to negate with overflow
...
LL | pub const C: u8 = A as u8;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: this constant cannot be used
  --> $DIR/const-err-multi.rs:8:1
   |
LL | pub const C: u8 = A as u8;
   | ^^^^^^^^^^^^^^^^^^-------^
   |                   |
   |                   referenced constant has errors

error: referenced constant has errors
  --> $DIR/const-err-multi.rs:11:1
   |
LL | pub const A: i8 = -std::i8::MIN;
   |                   ------------- attempt to negate with overflow
...
LL | pub const D: i8 = 50 - A;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: this constant cannot be used
  --> $DIR/const-err-multi.rs:11:1
   |
LL | pub const D: i8 = 50 - A;
   | ^^^^^^^^^^^^^^^^^^------^
   |                   |
   |                   referenced constant has errors

error: aborting due to 7 previous errors

